[package]
name = "pkcs11-test"
version = "0.1.0"
edition = "2021"
autobins = false
default-run = "pkcs11-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pkcs11-test"
path = "src/bin/pkcs11_test_v31.rs"

[[bin]]
name = "pkcs11-test-legacy"
path = "src/main.rs"

[dependencies]
cryptoki = "0.6.2"
cryptoki-sys = "0.1.8"
quick-xml = "0.31.0"
clap = { version = "4.5.17", features = ["derive"]}
libloading = "0.8.6"
